--- a/app.css
+++ b/app.css
@@ -13,7 +13,15 @@ body {
 
 h1 {
   text-align: center;
-  margin-top: 2rem;
+  width: 90vw;
+  max-width: 1000px;
+  color: #3a3b3c;
+  background-color: #f7f7f7;
+  margin: 0 auto;
+  margin-top: 3rem;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  padding: 2rem 0 1rem;
 }
 
 #app {
@@ -25,9 +33,13 @@ h1 {
     'activeProjects finishedProjects';
   justify-content: center;
   grid-gap: 20px;
-  width: 100vw;
+  width: 90vw;
   max-width: 1000px;
   margin: 0 auto;
+  background-color: #f7f7f7;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 5px;
+  padding: 0 0 2rem;
 }
 
 label,
@@ -39,6 +51,7 @@ textarea {
 
 label {
   font-weight: bold;
+  color: #3a3b3c;
 }
 
 input,
@@ -53,16 +66,18 @@ textarea {
 input:focus,
 textarea:focus {
   outline: none;
-  background: #fff5f9;
+  background: #fff6ee;
 }
 
 button {
   font: inherit;
+  font-weight: bold;
   background: linear-gradient(-20deg, #fc6076 0%, #ff9a44 100%);
   border: 1px solid #fc6076;
   border-radius: 5px;
   cursor: pointer;
   color: #fff;
+  margin-top: 0.5rem;
   padding: 0.75rem 1rem;
 }
 
@@ -72,7 +87,7 @@ button:focus {
 
 button:hover,
 button:active {
-  background: #ff9a44;
+  background: linear-gradient(-20deg, #ff9a44 0%, #fc6076 100%);
   border-color: #ff9a44;
 }
 
@@ -127,7 +142,7 @@ button:active {
 }
 
 .projects li {
-  box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.26);
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.26);
   padding: 1rem;
   margin: 1rem;
   background: #fff;
@@ -156,11 +171,11 @@ button:active {
 }
 
 .droppable {
-  background:#f4f4f4;
+  background: #ffd8cc;
 }
 
 #finished-projects .droppable {
-  background:#dce8f7;
+  background: #dbe4f1;
 }
 
 #user-input {
@@ -170,7 +185,7 @@ button:active {
   padding: 1rem;
   border: 1px solid #fc6076;
   border-radius: 5px;
-  background: #f7f7f7;
+  background-color: #fff;
 }
 
 @media (max-width: 720px) {
@@ -181,10 +196,10 @@ button:active {
   }
 
   #user-input {
-    width: 90vw;
+    width: 85vw;
   }
 
   .projects {
-    width: 90vw;
+    width: 85vw;
   }
 }
